--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "bulma": "^0.9.0",
+    "mysql2": "^3.14.0",
     "notiflix": "^3.2.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
